--- a/jobs/harfbuzz.yml
+++ b/jobs/harfbuzz.yml
@@ -52,10 +52,10 @@
             node: linux
         - 'harfbuzz-{arch}':
             arch: winx64
-            build: 'C:\\build\\harfbuzz'
-            freetype_include: 'C:\\opt\\freetype\\include\\freetype2'
-            freetype_library: 'C:\\opt\\freetype\\lib\\freetype.lib'
+            build: 'D:\\build\\harfbuzz'
+            freetype_include: 'D:\\opt\\freetype\\include\\freetype2'
+            freetype_library: 'D:\\opt\\freetype\\lib\\freetype.lib'
             generator: NMake Makefiles
-            install: 'C:\\opt\\harfbuzz'
+            install: 'D:\\opt\\harfbuzz'
             make: ''
             node: windows
