--- a/jobs/panda3d.yml
+++ b/jobs/panda3d.yml
@@ -217,103 +217,103 @@
             zlib_library: /app/jenkins/workspace/blender-thirdparty-lynx64/zlib/lib/libz.a
         - 'panda3d{variant}-{arch}':
             arch: winx64
-            bison_executable: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\bison'
-            build: 'C:\\build\\panda3d'
-            bullet_include: 'C:\\opt\\bullet\\include\\bullet'
-            bullet_library_collision: 'C:\\opt\\bullet\\lib\\BulletCollision.lib'
-            bullet_library_dynamics: 'C:\\opt\\bullet\\lib\\BulletDynamics.lib'
-            bullet_library_math: 'C:\\opt\\bullet\\lib\\LinearMath.lib'
-            bullet_library_softbody: 'C:\\opt\\bullet\\lib\\BulletSoftBody.lib'
-            bullet_root: 'C:\\opt\\bullet'
-            flex_executable: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\flex'
-            freetype_cmake: 'C:\\opt\\freetypehb\\lib\\cmake\\freetype'
-            freetype_include: 'C:\\opt\\freetypehb\\include\\freetype2'
-            freetype_library: 'C:\\opt\\freetypehb\\lib\\freetype.lib'
-            freetype_root: 'C:\\opt\\freetypehb'
+            bison_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\bison'
+            build: 'D:\\build\\panda3d'
+            bullet_include: 'D:\\opt\\bullet\\include\\bullet'
+            bullet_library_collision: 'D:\\opt\\bullet\\lib\\BulletCollision.lib'
+            bullet_library_dynamics: 'D:\\opt\\bullet\\lib\\BulletDynamics.lib'
+            bullet_library_math: 'D:\\opt\\bullet\\lib\\LinearMath.lib'
+            bullet_library_softbody: 'D:\\opt\\bullet\\lib\\BulletSoftBody.lib'
+            bullet_root: 'D:\\opt\\bullet'
+            flex_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\flex'
+            freetype_cmake: 'D:\\opt\\freetypehb\\lib\\cmake\\freetype'
+            freetype_include: 'D:\\opt\\freetypehb\\include\\freetype2'
+            freetype_library: 'D:\\opt\\freetypehb\\lib\\freetype.lib'
+            freetype_root: 'D:\\opt\\freetypehb'
             generator: NMake Makefiles
-            harfbuzz_include: 'C:\\opt\\harfbuzz\\include\\harfbuzz'
-            harfbuzz_library: 'C:\\opt\\harfbuzz\\lib\\harfbuzz.lib'
+            harfbuzz_include: 'D:\\opt\\harfbuzz\\include\\harfbuzz'
+            harfbuzz_library: 'D:\\opt\\harfbuzz\\lib\\harfbuzz.lib'
             have_gl: NO
             have_gtk: NO
             have_x11: NO
-            install: 'C:\\opt\\panda3d'
-            install_python: 'C:\\opt\\panda3d\\lib\\site-packages'
-            interrogate_executable: 'C:\\opt\\interrogate\\bin\\interrogate.exe'
-            interrogate_module_executable: 'C:\\opt\\interrogate\\bin\\interrogate_module.exe'
-            jpeg_include: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\include'
-            jpeg_library: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\lib\\libjpeg.lib'
+            install: 'D:\\opt\\panda3d'
+            install_python: 'D:\\opt\\panda3d\\lib\\site-packages'
+            interrogate_executable: 'D:\\opt\\interrogate\\bin\\interrogate.exe'
+            interrogate_module_executable: 'D:\\opt\\interrogate\\bin\\interrogate_module.exe'
+            jpeg_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\include'
+            jpeg_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\lib\\libjpeg.lib'
             make: ''
             node: windows
-            ogg_include: 'C:\\opt\\vorbis\\include'
-            ogg_library: 'C:\\opt\\vorbis\\lib\\ogg.lib'
-            ogg_root: 'C:\\opt\\vorbis'
-            openal_cmake: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\cmake\\openal'
-            openal_include: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\include'
-            openal_library: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\OpenAL32.lib'
-            panda3d_thirdparty: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty'
-            png_include: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\include'
-            png_library: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\lib\\libpng.lib'
-            python_executable: 'C:\\opt\\python\\bin\\python3.13t'
-            python_include: 'C:\\opt\\python\\include'
-            python_library: 'C:\\opt\\python\\libs\\python313t.lib'
+            ogg_include: 'D:\\opt\\vorbis\\include'
+            ogg_library: 'D:\\opt\\vorbis\\lib\\ogg.lib'
+            ogg_root: 'D:\\opt\\vorbis'
+            openal_cmake: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\cmake\\openal'
+            openal_include: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\include'
+            openal_library: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\OpenAL32.lib'
+            panda3d_thirdparty: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty'
+            png_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\include'
+            png_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\lib\\libpng.lib'
+            python_executable: 'D:\\opt\\python\\bin\\python3.13t'
+            python_include: 'D:\\opt\\python\\include'
+            python_library: 'D:\\opt\\python\\libs\\python313t.lib'
             python_version: '3.13t'
             python_version_int: '3.13'
             variant: ''
             version: master
-            vorbis_include: 'C:\\opt\\vorbis\\include'
-            vorbis_library: 'C:\\opt\\vorbis\\lib\\vorbis.lib'
-            vorbis_root: 'C:\\opt\\vorbis'
-            vorbisfile_library: 'C:\\opt\\vorbis\\lib\\vorbisfile.lib'
-            zlib_include: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\include'
-            zlib_library: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\lib\\libz_st.lib'
+            vorbis_include: 'D:\\opt\\vorbis\\include'
+            vorbis_library: 'D:\\opt\\vorbis\\lib\\vorbis.lib'
+            vorbis_root: 'D:\\opt\\vorbis'
+            vorbisfile_library: 'D:\\opt\\vorbis\\lib\\vorbisfile.lib'
+            zlib_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\include'
+            zlib_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\lib\\libz_st.lib'
         - 'panda3d{variant}-{arch}':
             arch: winx64
-            bison_executable: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\bison'
-            build: 'C:\\build\\panda3dnt'
-            bullet_include: 'C:\\opt\\bullet\\include\\bullet'
-            bullet_library_collision: 'C:\\opt\\bullet\\lib\\BulletCollision.lib'
-            bullet_library_dynamics: 'C:\\opt\\bullet\\lib\\BulletDynamics.lib'
-            bullet_library_math: 'C:\\opt\\bullet\\lib\\LinearMath.lib'
-            bullet_library_softbody: 'C:\\opt\\bullet\\lib\\BulletSoftBody.lib'
-            bullet_root: 'C:\\opt\\bullet'
-            flex_executable: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\flex'
-            freetype_cmake: 'C:\\opt\\freetypehb\\lib\\cmake\\freetype'
-            freetype_include: 'C:\\opt\\freetypehb\\include\\freetype2'
-            freetype_library: 'C:\\opt\\freetypehb\\lib\\freetype.lib'
-            freetype_root: 'C:\\opt\\freetypehb'
+            bison_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\bison'
+            build: 'D:\\build\\panda3dnt'
+            bullet_include: 'D:\\opt\\bullet\\include\\bullet'
+            bullet_library_collision: 'D:\\opt\\bullet\\lib\\BulletCollision.lib'
+            bullet_library_dynamics: 'D:\\opt\\bullet\\lib\\BulletDynamics.lib'
+            bullet_library_math: 'D:\\opt\\bullet\\lib\\LinearMath.lib'
+            bullet_library_softbody: 'D:\\opt\\bullet\\lib\\BulletSoftBody.lib'
+            bullet_root: 'D:\\opt\\bullet'
+            flex_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\flex'
+            freetype_cmake: 'D:\\opt\\freetypehb\\lib\\cmake\\freetype'
+            freetype_include: 'D:\\opt\\freetypehb\\include\\freetype2'
+            freetype_library: 'D:\\opt\\freetypehb\\lib\\freetype.lib'
+            freetype_root: 'D:\\opt\\freetypehb'
             generator: NMake Makefiles
-            harfbuzz_include: 'C:\\opt\\harfbuzz\\include\\harfbuzz'
-            harfbuzz_library: 'C:\\opt\\harfbuzz\\lib\\harfbuzz.lib'
+            harfbuzz_include: 'D:\\opt\\harfbuzz\\include\\harfbuzz'
+            harfbuzz_library: 'D:\\opt\\harfbuzz\\lib\\harfbuzz.lib'
             have_gl: NO
             have_gtk: NO
             have_x11: NO
-            install: 'C:\\opt\\panda3dnt'
-            install_python: 'C:\\opt\\panda3dnt\\lib\\site-packages'
-            interrogate_executable: 'C:\\opt\\interrogatent\\bin\\interrogate.exe'
-            interrogate_module_executable: 'C:\\opt\\interrogatent\\bin\\interrogate_module.exe'
-            jpeg_include: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\include'
-            jpeg_library: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\lib\\libjpeg.lib'
+            install: 'D:\\opt\\panda3dnt'
+            install_python: 'D:\\opt\\panda3dnt\\lib\\site-packages'
+            interrogate_executable: 'D:\\opt\\interrogatent\\bin\\interrogate.exe'
+            interrogate_module_executable: 'D:\\opt\\interrogatent\\bin\\interrogate_module.exe'
+            jpeg_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\include'
+            jpeg_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\jpeg\\lib\\libjpeg.lib'
             make: ''
             node: windows
-            ogg_include: 'C:\\opt\\vorbis\\include'
-            ogg_library: 'C:\\opt\\vorbis\\lib\\ogg.lib'
-            ogg_root: 'C:\\opt\\vorbis'
-            openal_cmake: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\cmake\\openal'
-            openal_include: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\include'
-            openal_library: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\OpenAL32.lib'
-            panda3d_thirdparty: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty'
-            png_include: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\include'
-            png_library: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\lib\\libpng.lib'
-            python_executable: 'C:\\opt\\pythonnt\\bin\\python'
-            python_include: 'C:\\opt\\pythonnt\\include'
-            python_library: 'C:\\opt\\pythonnt\\libs\\python312.lib'
+            ogg_include: 'D:\\opt\\vorbis\\include'
+            ogg_library: 'D:\\opt\\vorbis\\lib\\ogg.lib'
+            ogg_root: 'D:\\opt\\vorbis'
+            openal_cmake: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\cmake\\openal'
+            openal_include: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\include'
+            openal_library: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\\win-libs-vc14-x64\\openal\\lib\\OpenAL32.lib'
+            panda3d_thirdparty: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty'
+            png_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\include'
+            png_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\png\\lib\\libpng.lib'
+            python_executable: 'D:\\opt\\pythonnt\\bin\\python'
+            python_include: 'D:\\opt\\pythonnt\\include'
+            python_library: 'D:\\opt\\pythonnt\\libs\\python312.lib'
             python_version: '3.12'
             python_version_int: '3.12'
             variant: nt
             version: nt
-            vorbis_include: 'C:\\opt\\vorbis\\include'
-            vorbis_library: 'C:\\opt\\vorbis\\lib\\vorbis.lib'
-            vorbis_root: 'C:\\opt\\vorbis'
-            vorbisfile_library: 'C:\\opt\\vorbis\\lib\\vorbisfile.lib'
-            zlib_include: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\include'
-            zlib_library: 'C:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\lib\\libz_st.lib'
+            vorbis_include: 'D:\\opt\\vorbis\\include'
+            vorbis_library: 'D:\\opt\\vorbis\\lib\\vorbis.lib'
+            vorbis_root: 'D:\\opt\\vorbis'
+            vorbisfile_library: 'D:\\opt\\vorbis\\lib\\vorbisfile.lib'
+            zlib_include: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\include'
+            zlib_library: 'D:\\jenkins\\workspace\\blender-thirdparty-winx64\\zlib\\lib\\libz_st.lib'
