--- a/jobs/interrogate.yml
+++ b/jobs/interrogate.yml
@@ -71,27 +71,27 @@
             variant: nt
         - 'interrogate{variant}-{arch}':
             arch: winx64
-            bison_executable: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\bison'
-            build: 'C:\\build\\interrogate'
-            flex_executable: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\flex'
+            bison_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\bison'
+            build: 'D:\\build\\interrogate'
+            flex_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\flex'
             generator: NMake Makefiles
-            install: 'C:\\opt\\interrogate'
+            install: 'D:\\opt\\interrogate'
             make: ''
             node: windows
-            python_executable: 'C:\\opt\\python\\bin\\python3.13t'
-            python_include: 'C:\\opt\\python\\include'
-            python_library: 'C:\\opt\\python\\libs\\python313t.lib'
+            python_executable: 'D:\\opt\\python\\bin\\python3.13t'
+            python_include: 'D:\\opt\\python\\include'
+            python_library: 'D:\\opt\\python\\libs\\python313t.lib'
             variant: ''
         - 'interrogate{variant}-{arch}':
             arch: winx64
-            bison_executable: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\bison'
-            build: 'C:\\build\\interrogatent'
-            flex_executable: 'C:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\flex'
+            bison_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\bison'
+            build: 'D:\\build\\interrogatent'
+            flex_executable: 'D:\\jenkins\\workspace\\panda3d-thirdparty-winx64\\panda3d-1.10.14\\thirdparty\win-util\\flex'
             generator: NMake Makefiles
-            install: 'C:\\opt\\interrogatent'
+            install: 'D:\\opt\\interrogatent'
             make: ''
             node: windows
-            python_executable: 'C:\\opt\\pythonnt\\bin\\python3.12'
-            python_include: 'C:\\opt\\pythonnt\\include'
-            python_library: 'C:\\opt\\pythonnt\\libs\\python312.lib'
+            python_executable: 'D:\\opt\\pythonnt\\bin\\python3.12'
+            python_include: 'D:\\opt\\pythonnt\\include'
+            python_library: 'D:\\opt\\pythonnt\\libs\\python312.lib'
             variant: nt
