--- a/jobs/python.yml
+++ b/jobs/python.yml
@@ -29,7 +29,6 @@
             make install -j 16
             patchelf --set-rpath \$ORIGIN/../lib {install}/bin/python{python_version}
             {install}/bin/python{python_app_version} -m ensurepip -v
-            {install}/bin/python{python_app_version} -m pip install git+https://github.com/pypa/setuptools.git@57379cdcfdd90a4e34eb8959462fabca71a723c8
 
 - job-template:
     name: 'python{variant}-winx64'
@@ -67,14 +66,13 @@
             xcopy /I /E /Y Lib            {install}\lib
             copy /V /Y {pyconfig}     {install}\include
             {install}\bin\python{python_app_version} -m ensurepip -v
-            {install}\bin\python{python_app_version} -m pip install git+https://github.com/pypa/setuptools.git@57379cdcfdd90a4e34eb8959462fabca71a723c8
 
 - project:
     name: python
     jobs:
         - 'python{variant}-lynx64':
             build: /app/build/python
-            git_tag: 'v3.13.0rc1'
+            git_tag: 'v3.13.0'
             install: /app/opt/python
             options: '--disable-gil'
             python_app_version: '3.13t'
@@ -90,7 +88,7 @@
             variant: nt
         - 'python{variant}-winx64':
             build: 'D:\\build\\python'
-            git_tag: 'v3.13.0rc1'
+            git_tag: 'v3.13.0'
             install: 'D:\\opt\\python'
             options: '--disable-gil'
             pyconfig: 'D:\\build\\python\\pyconfig.h'
