--- a/jobs/sdk/requirements.txt
+++ b/jobs/sdk/requirements.txt
@@ -1,12 +1,10 @@
-git+https://github.com/pypa/setuptools.git@57379cdcfdd90a4e34eb8959462fabca71a723c8
-git+https://github.com/Legrandin/pycryptodome.git@13a8461e068ebca99d21e0f2f71830504b25ac7e
-git+https://github.com/Moguri/panda3d-gltf.git@948d0e9fa16423ccbd902b904b9139d1f825a0fb
-git+https://github.com/cython/cython.git@10736826646c894b8b2c9cd3799ce7142707c8ed
+Cython==3.0.11
 PySocks==1.7.1
-httplib2==0.20.2
+httplib2==0.22.0
 jinja2==3.1.4
-jsonschema==3.2.0
-nvidia-ml-py==12.555.43
+jsonschema==4.23.0
+nvidia-ml-py==12.560.30
 oauthlib==3.2.2
 py-ubjson==0.16.1
+pycryptodome==3.21.0
 requests==2.32.3
