--- a/jobs/sdk/requirements.txt
+++ b/jobs/sdk/requirements.txt
@@ -1,4 +1,4 @@
-Cython==3.0.11
+git+https://github.com/cython/cython.git@ad8c9b6b000cc94123fd0086ac64417debbf0a39
 PySocks==1.7.1
 httplib2==0.22.0
 jinja2==3.1.4
